--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,3 +21,8 @@ java {
         languageVersion = JavaLanguageVersion.of(24)
     }
 }
+
+dependencies {
+    testImplementation libs.junit.jupiter
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
