--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
 
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-    "source.organizeImports": true
-    }
+        "source.organizeImports": "explicit"
+    },
+    "java.debug.settings.onBuildFailureProceed": true
 }
 
