--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 javafx {
     version = "24.0.2"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
 }
 
 application {
