--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ java {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
     testImplementation libs.junit.jupiter
     testImplementation 'org.testfx:testfx-junit:4.0+'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
