Added Logging to NotificationManager and StorageController

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ java {
 
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
     testImplementation libs.junit.jupiter
     testImplementation 'org.testfx:testfx-junit:4.0+'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
