--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports": "explicit"
   },
-  "java.debug.settings.onBuildFailureProceed": true
+  "java.debug.settings.onBuildFailureProceed": true,
+  "sonarlint.connectedMode.project": {
+    "connectionId": "djthomann",
+    "projectKey": "djthomann_PizzaPal2.0"
+  }
 }
